# Proj2

./: .gitignore
CanadianExperienceLib/: CMakeLists.txt  HaroldFactory.cpp  MachineAdapter.cpp  MachineAdapter.h  MachinePropertiesDialog.cpp  MachinePropertiesDialog.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  SpartyFactory.cpp  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewTimeline.cpp
MachineLib/: Bubble.cpp  Bubble.h  BubbleBlower.cpp  BubbleBlower.h  CMakeLists.txt  Component.cpp  Component.h  FlappingBelt.cpp  FlappingBelt.h  Machine.cpp  Machine.h  MachineDialog.cpp  MachineDialog.h  MachineFactory1.cpp  MachineFactory1.h  MachineFactory2.cpp  MachineFactory2.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemFactory.h  Motor.cpp  Motor.h  Polygon.h  Pulley.cpp  Pulley.h  Shape.cpp  Shape.h  Sink.cpp  Sink.h  Source.cpp  Source.h  pch.h
